--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -55,6 +55,8 @@ services:
       - "./client:${DC_PATH}/service:delegated"
       - "./shared:${DC_PATH}/service/shared:delegated"
       - "${DC_PATH}/service/node_modules"
+    secrets:
+      - DATABASE_PASSWORD
     environment:
       DC_COMMAND: ${DC_COMMAND}
       DOCKER_HOST: ${DOCKER_HOST}
@@ -70,9 +72,6 @@ services:
       DATABASE_HOST: full-stack-template-database
       DATABASE_NAME: ${db_database_name}
       DATABASE_USER: ${db_database_app_username}
-      # NOTE: Hardcoded secret env vars until windows issue has been resolved:
-      # https://github.com/docker/compose/issues/6585
-      DATABASE_PASSWORD: secret1234
 
   full-stack-template-graphql:
     container_name: full-stack-template-graphql
@@ -121,6 +120,11 @@ services:
       - "./server:${DC_PATH}/service:delegated"
       - "./shared:${DC_PATH}/service/shared:delegated"
       - "${DC_PATH}/service/node_modules"
+    secrets:
+      - DATABASE_PASSWORD
+      - REDIS_PASSWORD
+      - S3_KEY_SECRET
+      - EXAMPLE_SECRET
     environment:
       DC_COMMAND: ${DC_COMMAND}
       HOST_OS: ${taito_host_os}
@@ -144,16 +148,13 @@ services:
       DATABASE_POOL_MAX: '10'
       DATABASE_SSL_ENABLED: ${db_database_ssl_enabled}
       DATABASE_SSL_CLIENT_CERT_ENABLED: ${db_database_ssl_client_cert_enabled}
+      REDIS_HOST: full-stack-template-redis
+      REDIS_PORT: 6379
       S3_URL: http://full-stack-template-storage:9000/
       S3_REGION: milkyway
       S3_BUCKET: bucket
       S3_KEY_ID: minio
       S3_FORCE_PATH_STYLE: 'true'
-      # NOTE: Hardcoded secret env vars until windows issue has been resolved:
-      # https://github.com/docker/compose/issues/6585
-      DATABASE_PASSWORD: secret1234
-      S3_KEY_SECRET: secret1234
-      EXAMPLE_SECRET: secret1234
 
   full-stack-template-www:
     container_name: full-stack-template-www
@@ -180,12 +181,17 @@ services:
 
   full-stack-template-redis:
     container_name: full-stack-template-redis
-    image: redis:5.0-alpine
+    image: bitnami/redis:6.0
     restart: unless-stopped
     networks:
       - default
     ports:
       - "6379"
+    secrets:
+      - REDIS_PASSWORD
+    environment:
+      REDIS_PASSWORD_FILE: '/run/secrets/REDIS_PASSWORD'
+      REDIS_AOF_ENABLED: 'no'
 
   full-stack-template-kafka:
     container_name: full-stack-template-kafka
@@ -214,13 +220,12 @@ services:
       - default
     ports:
       - "127.0.0.1:6000:5432"
+    secrets:
+      - DATABASE_PASSWORD
     environment:
       POSTGRES_DB: ${db_database_name}
       POSTGRES_USER: ${db_database_app_username}
-      # NOTE: Hardcoded secret env vars until windows issue has been resolved:
-      # https://github.com/docker/compose/issues/6585
-      # POSTGRES_PASSWORD_FILE: /run/secrets/DATABASE_PASSWORD
-      POSTGRES_PASSWORD: secret1234
+      POSTGRES_PASSWORD_FILE: /run/secrets/DATABASE_PASSWORD
     volumes:
       - "./database:/docker-entrypoint-initdb.d:delegated"
 
@@ -239,15 +244,15 @@ services:
       MINIO_ACCESS_KEY: minio
       MINIO_SECRET_KEY: ${taito_default_password}
 
-# NOTE: Hardcoded secret env vars until windows issue has been resolved:
-# https://github.com/docker/compose/issues/6585
-# secrets:
-#   DATABASE_PASSWORD:
-#     file: ./secrets/${taito_env}/${db_database_app_secret}
-#   S3_KEY_SECRET:
-#     file: ./secrets/${taito_env}/${taito_project}-${taito_env}-storage.secretKey
-#   EXAMPLE_SECRET:
-#     file: ./secrets/${taito_env}/${taito_project}-${taito_env}-example.secret
+secrets:
+  DATABASE_PASSWORD:
+    file: ./secrets/${taito_env}/${db_database_app_secret}
+  REDIS_PASSWORD:
+    file: ./secrets/${taito_env}/${taito_project}-${taito_env}-redis.password
+  S3_KEY_SECRET:
+    file: ./secrets/${taito_env}/${taito_project}-${taito_env}-storage.secretKey
+  EXAMPLE_SECRET:
+    file: ./secrets/${taito_env}/${taito_project}-${taito_env}-example.secret
 
 networks:
   default:
