--- a/www/Dockerfile
+++ b/www/Dockerfile
@@ -1,7 +1,5 @@
 # Builder, tester and runtime container for local development
-# NOTE: Use the same cypress version both in Dockerfile and package.json to
-#       avoid unnecessary cypress download
-FROM taitounited/cypress:4.6.0
+FROM node:lts-buster-slim
 ARG SERVICE_DIR=.
 RUN apt-get -y update && apt-get -y install rsync # rsync for windows devs
 ENV NODE_ENV development
