--- a/www/package.json
+++ b/www/package.json
@@ -6,12 +6,9 @@
     "unit": "if [ -d ./site ]; then cd site && npm run test; fi",
     "test": "echo No tests for www",
     "build": "./build-site.sh",
-    "serve": "http-server ./public",
-    "cypress:run": "cypress run -s test/integration/**/${test_name}.spec.js",
-    "cypress:open": "cypress open"
+    "serve": "http-server ./public"
   },
   "devDependencies": {
-    "cypress": "^4.6.0",
     "http-server": "0.12.3"
   }
 }
