--- a/scripts/helm/examples.yaml
+++ b/scripts/helm/examples.yaml
@@ -136,6 +136,30 @@ full-stack:
             JOB_VARIABLE: 1234
 
 # ----------------------------------------------------------
+# External services (dedicated IP address, any port)
+# ----------------------------------------------------------
+
+  services:
+    mail:
+      type: external
+      port: 110
+      targetPort: 8080
+      ...
+      ...
+
+# ----------------------------------------------------------
+# Multiple ports
+# ----------------------------------------------------------
+
+  services:
+    mail:
+      ports:
+       - port: 110
+         targetPort: 8080
+       - port: 995
+         targetPort: 9080
+
+# ----------------------------------------------------------
 # Volumes and persistence
 # ----------------------------------------------------------
 
