--- a/alternatives/server-flask/Dockerfile.build
+++ b/alternatives/server-flask/Dockerfile.build
@@ -10,6 +10,7 @@ RUN apk add --update-cache \
   python3-dev \
   rsync # rsync for windows devs
 
+RUN mkdir -p /service
 WORKDIR /service
 
 COPY ${SERVICE_DIR} /service
