--- a/alternatives/server-micronaut-java/Dockerfile
+++ b/alternatives/server-micronaut-java/Dockerfile
@@ -2,6 +2,7 @@
 FROM adoptopenjdk/openjdk11-openj9:jdk-11.0.1.13-alpine-slim
 ARG SERVICE_DIR=.
 RUN apk add --update-cache rsync # rsync for windows devs
+RUN mkdir -p /service
 WORKDIR /service
 COPY ${SERVICE_DIR} /service
 # ENV GRADLE_OPTS "--project-cache-dir /.gradle"
