--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -127,9 +127,9 @@ full-stack:
         DATABASE_SSL_KEY: ${db_database_ssl_key_secret}
         DATABASE_PASSWORD: ${db_database_app_secret}
         REDIS_PASSWORD: ${taito_project}-${taito_env}-redis.password
-        S3_KEY_SECRET: ${taito_project}-${taito_env}-storage.secretKey
+        BUCKET_KEY_SECRET: ${taito_project}-${taito_env}-storage.secretKey
       secretEnv:
-        S3_KEY_ID: ${taito_project}-${taito_env}-storage.accessKeyId
+        BUCKET_KEY_ID: ${taito_project}-${taito_env}-storage.accessKeyId
       env:
         SENTRY_DSN: #sentryDSN
         API_PORT: '8080'
@@ -146,10 +146,12 @@ full-stack:
         DATABASE_POOL_MAX: '10'
         REDIS_HOST: ${taito_project}-${taito_env}-redis
         REDIS_PORT: 6379
-        S3_URL: http://${taito_project}-${taito_env}-storage:9000/
-        S3_REGION: ${taito_provider_region}
-        S3_BUCKET: ${taito_random_name}-${taito_env}
-        S3_FORCE_PATH_STYLE: 'true'
+        BUCKET_URL: http://${taito_project}-${taito_env}-storage:9000/
+        BUCKET_REGION: ${taito_provider_region}
+        BUCKET_BUCKET: ${taito_random_name}-${taito_env}
+        BUCKET_BROWSE_URL: https://console.cloud.google.com/storage/browser/${taito_random_name}-${taito_env}
+        BUCKET_DOWNLOAD_URL: https://storage.cloud.google.com/${taito_random_name}-${taito_env}
+        BUCKET_FORCE_PATH_STYLE: 'true'
       # EXAMPLE: cron jobs that re-use the same Docker image and settings as server
       # cronJobs:
       #   - name: examplejob1
