feat: set database pool values
Multiple containers -> less db connections required for each

--- a/scripts/helm-prod.yaml
+++ b/scripts/helm-prod.yaml
@@ -7,3 +7,8 @@ full-stack:
     memoryRequest: 70Mi
     memoryLimit: 512Mi
     # TODO enable autoscaling
+
+  services:
+    server:
+      env:
+        DATABASE_POOL_MIN: '1'
