--- a/www/Dockerfile
+++ b/www/Dockerfile
@@ -1,27 +1,22 @@
 # Builder, tester and runtime container for local development
 FROM node:lts-buster-slim
 ARG SERVICE_DIR=.
-RUN apt-get -y update && apt-get -y install rsync # rsync for windows devs
 ENV NODE_ENV development
-
-RUN mkdir /service && chown node:node /service
 
 RUN mkdir -p /service
 WORKDIR /service
+
+# Install dependencies and npm libraries on container
 COPY ${SERVICE_DIR}/install.sh \
      ${SERVICE_DIR}/package* \
      /service/
 RUN ./install.sh
-RUN . ~/.bashrc && npm install --loglevel warn
+RUN npm install --loglevel warn
 
 # Install site npm libraries on container to speed up builds
-COPY ${SERVICE_DIR}/hooks.json \
-     ${SERVICE_DIR}/site/package* \
+COPY ${SERVICE_DIR}/site/package* \
      /service/site/
-RUN rm -f /service/site/hooks.json
-RUN mkdir -p /build && \
-    . ~/.bashrc && \
-    npm run install-site
+RUN npm run install-site
 
 # Start development
 EXPOSE 8080
