--- a/server/package.json
+++ b/server/package.json
@@ -13,24 +13,24 @@
     "start:prod": "NODE_ENV=production npm run build:prod && node build/index.js"
   },
   "dependencies": {
-    "@sentry/node": "^5.6.2",
-    "aws-sdk": "^2.517.0",
+    "@sentry/node": "^5.19.0",
+    "aws-sdk": "^2.709.0",
     "axios": "^0.19.2",
     "boom": "7.3.0",
-    "bunyan": "1.8.12",
-    "koa": "^2.12.0",
+    "bunyan": "^1.8.14",
+    "koa": "^2.13.0",
     "koa-basic-auth": "4.0.0",
     "koa-joi-router": "^6.0.2",
-    "koa-qs": "2.0.0",
+    "koa-qs": "^3.0.0",
     "lodash": "4.17.15",
-    "moment": "^2.26.0",
+    "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "mustache": "^4.0.1",
-    "pg-promise": "^10.5.6",
+    "pg-promise": "^10.5.7",
     "showdown": "^1.9.1",
     "stack-trace": "0.0.10",
     "unescape": "1.0.1",
-    "uuid": "^8.1.0"
+    "uuid": "^8.2.0"
   },
   "resolutions": {
     "qs": "~6.3.2"
@@ -40,35 +40,35 @@
     "@types/bunyan": "1.8.6",
     "@types/cheerio": "^0.22.13",
     "@types/co-body": "^5.1.0",
-    "@types/jest": "^25.2.3",
+    "@types/jest": "^26.0.3",
     "@types/joi": "^14.3.4",
     "@types/koa": "^2.11.3",
     "@types/koa-basic-auth": "2.0.3",
     "@types/koa-qs": "2.0.0",
     "@types/koa-router": "^7.4.1",
-    "@types/lodash": "^4.14.137",
+    "@types/lodash": "^4.14.157",
     "@types/moment-timezone": "^0.5.13",
     "@types/mustache": "^4.0.1",
-    "@types/node": "^14.0.5",
+    "@types/node": "^14.0.14",
     "@types/pg": "^7.11.0",
     "@types/showdown": "1.9.3",
     "@types/stack-trace": "0.0.29",
     "@types/uuid": "^8.0.0",
-    "@typescript-eslint/eslint-plugin": "^3.0.0",
-    "@typescript-eslint/parser": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
     "cheerio": "1.0.0-rc.3",
-    "eslint": "^7.0.0",
+    "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.1.0",
     "eslint-config-standard": "^14.0.1",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "^26.0.1",
+    "jest": "^26.1.0",
     "prettier": "^2.0.5",
-    "ts-jest": "^26.0.0",
+    "ts-jest": "^26.1.1",
     "ts-node-dev": "1.0.0-pre.40",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.6"
   }
 }
