--- a/client/package.json
+++ b/client/package.json
@@ -17,27 +17,27 @@
     "lang:compile": "lingui compile"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.8.7",
+    "@babel/polyfill": "^7.10.4",
     "@lingui/react": "^2.9.1",
-    "@material-ui/core": "^4.3.3",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@sentry/browser": "^5.6.2",
-    "@testing-library/jest-dom": "^5.8.0",
+    "@sentry/browser": "^5.19.0",
+    "@testing-library/jest-dom": "^5.11.0",
     "@types/lingui__core": "2.7.0",
     "@types/lingui__macro": "2.7.3",
     "@types/lingui__react": "^2.8.2",
-    "@types/react": "^16.9.2",
+    "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-actions": "2.6.1",
-    "@types/redux-logger": "3.0.7",
+    "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.0",
     "axios": "^0.19.2",
     "connected-react-router": "^6.8.0",
     "core-js": "^3.2.1",
     "history": "^4.10.1",
-    "query-string": "^6.12.1",
+    "query-string": "^6.13.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-hot-loader": "^4.12.11",
@@ -51,22 +51,22 @@
     "workbox-window": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/cli": "^7.10.4",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/preset-typescript": "^7.9.0",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
     "@lingui/cli": "^2.9.1",
     "@lingui/loader": "^2.9.1",
     "@lingui/macro": "^2.9.1",
-    "@testing-library/react": "^10.0.4",
-    "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.5",
-    "@typescript-eslint/eslint-plugin": "^3.0.0",
-    "@typescript-eslint/parser": "^3.0.0",
+    "@testing-library/react": "^10.4.3",
+    "@types/jest": "^26.0.3",
+    "@types/node": "^14.0.14",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.1.0",
@@ -75,32 +75,32 @@
     "babel-plugin-styled-components": "^1.10.7",
     "babel-plugin-syntax-class-properties": "6.13.0",
     "babel-plugin-transform-remove-console": "6.9.4",
-    "css-loader": "^3.5.3",
-    "cypress": "4.6.0",
-    "eslint": "^7.0.0",
+    "css-loader": "^3.6.0",
+    "cypress": "4.9.0",
+    "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.1.0",
     "eslint-config-standard": "^14.0.1",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-standard": "^4.0.1",
     "file-loader": "^6.0.0",
-    "fork-ts-checker-webpack-plugin": "^4.1.4",
+    "fork-ts-checker-webpack-plugin": "^5.0.5",
     "html-webpack-plugin": "^4.3.0",
-    "jest": "^26.0.1",
+    "jest": "^26.1.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "pg-promise": "^10.5.6",
+    "pg-promise": "^10.5.7",
     "prettier": "^2.0.5",
-    "source-map-loader": "0.2.4",
+    "source-map-loader": "^1.0.1",
     "style-loader": "^1.2.1",
-    "typescript": "^3.9.3",
+    "typescript": "^3.9.6",
     "webapp-webpack-plugin": "2.7.1",
     "webpack": "^4.39.2",
     "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.7",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.8.0",
     "webpack-pwa-manifest": "^4.2.0",
     "workbox-webpack-plugin": "^5.1.3"
