--- a/www/site/package.json
+++ b/www/site/package.json
@@ -5,38 +5,42 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.0.76",
-    "gatsby-image": "^2.0.20",
-    "gatsby-plugin-manifest": "^2.0.9",
-    "gatsby-plugin-offline": "^3.0.13",
-    "gatsby-plugin-react-helmet": "^3.0.2",
-    "gatsby-plugin-sharp": "^2.0.14",
-    "gatsby-plugin-styled-components": "^3.0.4",
-    "gatsby-remark-prismjs": "^3.2.3",
-    "gatsby-source-filesystem": "^2.0.18",
-    "gatsby-transformer-remark": "^2.2.1",
-    "gatsby-transformer-sharp": "^2.1.8",
-    "prismjs": "^1.15.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-helmet": "^5.2.0",
-    "styled-components": "^4.1.3",
-    "unstyled": "^0.2.0"
+    "gatsby": "^2.23.14",
+    "gatsby-image": "^2.4.11",
+    "gatsby-plugin-manifest": "^2.4.16",
+    "gatsby-plugin-offline": "^3.2.15",
+    "gatsby-plugin-react-helmet": "^3.3.8",
+    "gatsby-plugin-sharp": "^2.6.16",
+    "gatsby-plugin-styled-components": "^3.3.8",
+    "gatsby-remark-prismjs": "^3.5.8",
+    "gatsby-source-filesystem": "^2.3.16",
+    "gatsby-transformer-remark": "^2.8.22",
+    "gatsby-transformer-sharp": "^2.5.9",
+    "prismjs": "^1.20.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.1.1",
+    "unstyled": "^0.2.2"
   },
   "keywords": [
     "gatsby"
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "gatsby build --prefix-paths",
+    "build:preview": "gatsby build --prefix-paths",
+    "publish": "gatsby build --prefix-paths",
+    "publish:preview": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
     "start": "npm run develop",
+    "start:docker": "gatsby develop --host 0.0.0.0 --port 8080",
     "format": "prettier --write \"src/**/*.js\"",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "devDependencies": {
-    "prettier": "^1.15.2"
+    "prettier": "^2.0.5"
   },
   "repository": {
     "type": "git",
