feat: use latest stable images: nginx:stable-alpine, minio/minio

--- a/admin/Dockerfile.build
+++ b/admin/Dockerfile.build
@@ -22,7 +22,7 @@ RUN npm run unit
 RUN npm run build && cp -r ./assets/* /build/
 
 # Production runtime
-FROM nginx:1.17-alpine
+FROM nginx:stable-alpine
 ARG BUILD_VERSION
 LABEL version=${BUILD_VERSION} \
       company=companyname \
