--- a/storage/Dockerfile
+++ b/storage/Dockerfile
@@ -1,5 +1,5 @@
 # Builder, tester and runtime container for local development
-FROM minio/minio:RELEASE.2020-05-29T14-08-49Z
+FROM minio/minio
 ARG SERVICE_DIR=.
 RUN mkdir -p /service
 WORKDIR /service
