--- a/docker-compose-remote.yaml
+++ b/docker-compose-remote.yaml
@@ -6,7 +6,7 @@ version: '3.5'
 services:
   full-stack-template-ingress:
     container_name: full-stack-template-ingress
-    image: nginx:1.17-alpine
+    image: nginx:stable-alpine
     restart: unless-stopped
     networks:
       - default
