--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -165,7 +165,7 @@ full-stack:
     storage:
       egress:
         - ip: public
-      image: minio/minio:RELEASE.2020-05-29T14-08-49Z
+      image: minio/minio
       port: 9000
       livenessPath: /minio/health/ready
       memoryRequest: 20Mi
