--- a/admin/Dockerfile.build
+++ b/admin/Dockerfile.build
@@ -30,8 +30,7 @@ LABEL version=${BUILD_VERSION} \
       role=admin
 RUN mkdir -p /service
 WORKDIR /service
-RUN chown -R nginx:nginx /var/cache/nginx && \
-    chown -R nginx:nginx /service && \
+RUN chown -R nginx:nginx /service && \
     mv /etc/nginx/nginx.conf /etc/nginx/nginx.conf.orig
 RUN sed -i '/application\/json/a\    application/wasm wasm;' \
     /etc/nginx/mime.types
