--- a/alternatives/client-static/Dockerfile
+++ b/alternatives/client-static/Dockerfile
@@ -3,8 +3,7 @@ FROM nginx:stable-alpine
 ARG SERVICE_DIR=.
 RUN mkdir -p /service
 WORKDIR /service
-RUN chown -R nginx:nginx /var/cache/nginx && \
-    chown -R nginx:nginx /service && \
+RUN chown -R nginx:nginx /service && \
     mv /etc/nginx/nginx.conf /etc/nginx/nginx.conf.orig
 RUN sed -i '/application\/json/a\    application/wasm wasm;' \
     /etc/nginx/mime.types
