--- a/client/index.html.template
+++ b/client/index.html.template
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <base href="/">
+    <base href="<%= htmlWebpackPlugin.options.baseHref %>">
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
