--- a/admin/index.html.template
+++ b/admin/index.html.template
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <base href="<%= htmlWebpackPlugin.options.baseHref %>">
+    <base href="<%= htmlWebpackPlugin.options.basePath %>/">
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
     <meta name="version" content="<%= htmlWebpackPlugin.options.version %>+<%= htmlWebpackPlugin.options.imageTag %>">
+    <!-- TODO: avoid unsafe-inline by setting nonce for all styles -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' <%= htmlWebpackPlugin.options.assetsDomain %>; style-src 'self' <%= htmlWebpackPlugin.options.assetsDomain %> 'unsafe-inline'; font-src 'self' <%= htmlWebpackPlugin.options.assetsDomain %> fonts.googleapis.com;">
 
     <title><%= htmlWebpackPlugin.options.title %></title>
 
